# deepspan

./: .gitignore  .gitmodules  .golangci.yml  .release-please-config.json  .release-please-manifest.json  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  STABLE_API.md  go.work  go.work.sum  pyproject.toml  west.yml
.claude/commands/: codegen.md  fw-build.md  hw-stats.md  layer-status.md  next.md  sim.md  verify.md
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-codegen.yml  ci-cpp.yml  ci-firmware.yml  ci-fullstack.yml  ci-go.yml  ci-kernel.yml  ci-python.yml  hwip-cpp.yml  hwip-firmware.yml  hwip-go.yml  release.yml
appframework/: CMakeLists.txt
appframework/include/deepspan/appframework/: circuit_breaker.hpp  device_pool.hpp  session_manager.hpp
appframework/scripts/: build.sh
appframework/src/: device_pool.cpp  session_manager.cpp
appframework/tests/: CMakeLists.txt
appframework/tests/unit/: test_session_manager.cpp
cmake/: DeepspanPlatformConfig.cmake  FindGRPC.cmake  hwip-plugin.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake
codegen/: pyproject.toml
codegen/deepspan_codegen/: __main__.py  cli.py  schema.py
codegen/deepspan_codegen/generators/: __init__.py  c_firmware.py  cpp_hwmodel.py  cpp_opcodes.py  proto.py
codegen/deepspan_codegen/templates/: c_kernel.h.j2  cpp_opcodes.hpp.j2  device.proto.j2  go_opcodes.go.j2  python_sdk.py.j2
codegen/tests/: conftest.py  test_cli.py  test_generators.py  test_roundtrip.py
docs/: user-manual-crc32.md
firmware/: Kconfig
firmware/app/: CMakeLists.txt  prj.conf
firmware/app/boards/: native_sim.conf
firmware/app/src/: main.cpp
firmware/scripts/: build.sh  setup-dev.sh  verify-setup.sh
firmware/tests/test_fsm/: CMakeLists.txt  testcase.yaml
firmware/tests/test_fsm/src/: main.cpp
firmware/zephyr/: module.yml
hw-model/: CMakeLists.txt
hw-model/scripts/: build.sh  setup-dev.sh
hw-model/src/: hw_model_server.cpp  main.cpp  sim_transport.cpp
hw-model/tests/: CMakeLists.txt
hw-model/tests/unit/: test_reg_map.cpp
hwip/: .gitignore  README.md  buf.gen.yaml  buf.yaml
hwip/_template/: hwip.yaml
hwip/_template/plugin/: CMakeLists.txt  plugin.cpp  plugin.hpp  register.cpp
hwip/accel/: CMakeLists.txt  buf.gen.yaml  buf.yaml  hwip.yaml
hwip/accel/firmware/drivers/deepspan_accel/: Kconfig  deepspan_accel_hwip.c
hwip/accel/hw-model/include/deepspan_accel/: reg_map.hpp
hwip/accel/hw-model/src/: accel_hw_model.cpp
hwip/accel/kernel/: deepspan_accel.h
hwip/accel/l4-plugin/: accelservice.go  go.mod  go.sum  register.go  shmclient.go  shmclient_test.go
hwip/accel/plugin/: CMakeLists.txt  accel_plugin.cpp  accel_plugin.hpp  register.cpp
hwip/accel/proto/deepspan_accel/v1/: device.proto
hwip/accel/sdk/: deepspan_accel.py
hwip/accel/server/: go.mod  opcodes.go  shmclient.go
hwip/accel/tests/: CMakeLists.txt  test_accel_e2e.cpp
hwip/codec/: CHANGELOG.md
hwip/crc32/: CMakeLists.txt  hwip.yaml
hwip/crc32/hw-model/src/: crc32_hw_model.cpp
hwip/crc32/plugin/: CMakeLists.txt  crc32_plugin.cpp  crc32_plugin.hpp  register.cpp
hwip/crc32/tests/: CMakeLists.txt  test_crc32_e2e.cpp
hwip/demo/: demo.py  go.mod
hwip/scripts/: codegen.sh  gate.sh  hwip.sh  lib.sh  run-demo.sh  setup-dev.sh  test-stack.sh  validate.sh
hwip/testutils/: CMakeLists.txt
kernel/scripts/: build.sh  setup-dev.sh  verify-setup.sh
kernel/tests/: deepspan_test.c
l2-firmware/: CMakeLists.txt
l2-firmware/app/: prj.conf
l2-firmware/app/src/: main.cpp
l2-firmware/drivers/: CMakeLists.txt
l2-firmware/drivers/deepspan/: Kconfig
l2-firmware/lib/components/: hwip_component.hpp
l2-firmware/tests/test_fsm/: CMakeLists.txt
l3-appframework/: CMakeLists.txt
l3-hw-model/: CMakeLists.txt
l3-hw-model/include/deepspan/hw_model/: reg_map.hpp
l3-hw-model/src/: firmware_sim.cpp  reg_map.cpp
l3-userlib/: CMakeLists.txt
l3-userlib/scripts/: setup-dev.sh
l3-userlib/tests/: CMakeLists.txt
l3/appframework/: CMakeLists.txt
l3/userlib/: CMakeLists.txt
l3/userlib/src/: error.cpp
l3/userlib/tests/: CMakeLists.txt
l4-mgmt-daemon/: Makefile  go.mod
l4-server/: go.mod
l4-server/scripts/: build.sh
l4/mgmt-daemon/: go.mod
l4/server/: go.mod
l5-gen/go/: go.mod
l5-proto/: buf.gen.yaml
l6-sdk/examples/: hello.py
mgmt-daemon/: .goreleaser.yml  Makefile  go.mod
proto/: buf.gen.yaml  buf.yaml
runtime/appframework/tests/: CMakeLists.txt
scripts/: README.md  codegen.sh  dev.sh  gate.sh  install-hooks.sh  lib.sh  run-sim.sh  setup-all.sh  test-fullstack.sh  tmux-crc32.sh  verify-build.sh  verify-setup.sh
sdk/: README.md  pyproject.toml
sdk/examples/: crc32_test.py  hello.py
sdk/scripts/: gen_proto.py  setup-dev.sh  verify-setup.sh
sdk/src/deepspan/: __init__.py  client.py  diagnostics.py  models.py
sdk/src/deepspan/v1/: device_pb2.py  device_pb2_grpc.py  management_pb2.py  management_pb2_grpc.py  telemetry_pb2.py  telemetry_pb2_grpc.py
sdk/tests/: test_client.py  test_diagnostics.py
server/: .goreleaser.yml  CMakeLists.txt  Dockerfile  Makefile  go.mod
server/cmd/server/: backend_cgo.go  backend_default.go  main.go
server/include/deepspan/server/: registry.hpp  submitter.hpp
server/internal/hwip/: registry.go  service.go  service_integration_test.go  service_test.go  shmclient.go  submitter.go
server/internal/hwip/cgo/: CMakeLists.txt
server/internal/management/: service.go
server/internal/telemetry/: service.go
server/pkg/hwip/: registry.go  service_integration_test.go  service_test.go  submitter.go
server/pkg/hwip/cgo/: CMakeLists.txt
server/pkg/server/: backend_cgo.go  backend_default.go  run.go
server/scripts/: setup-dev.sh  verify-setup.sh
server/src/: hwip_service.cpp  hwip_service.hpp  main.cpp  mgmt_service.cpp  mgmt_service.hpp  registry.cpp  telemetry_service.cpp  telemetry_service.hpp
userlib/: CMakeLists.txt
userlib/tests/: CMakeLists.txt
userlib/tests/integration/: test_device_integration.cpp
userlib/tests/unit/: test_async_client.cpp  test_device.cpp
(+151 files in other folders)
