[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepspan-sdk"
version = "0.1.0"
description = "Python SDK for the Deepspan HW-to-service stack"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "grpcio>=1.64",
    "protobuf>=5.27",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.64",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deepspan"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
